# faster-fdcm

./: .gitignore  templatePGM.pgm
Fdcm/: EIEdgeImage.cpp  EIEdgeImage.h  LMDetWind.h  LMDirectionalIntegralDistanceImage.cpp  LMDirectionalIntegralDistanceImage.h  LMDisplay.cpp  LMDisplay.h  LMDistanceImage.cpp  LMDistanceImage.h  LMLineMatcher.cpp  LMLineMatcher.h  LMNonMaximumSuppression.cpp  LMNonMaximumSuppression.h  MatchingCostMap.cpp  MatchingCostMap.h  fdcm.cpp
IMU_GNSS_FUSION/include/common/: state.hpp  utils.hpp  view.hpp
IMU_GNSS_FUSION/include/estimator/: ekf.hpp  estimator.hpp  kf.hpp  map.hpp  ukf.hpp
IMU_GNSS_FUSION/include/fusion/: factor.hpp  observer.hpp  predictor.hpp  updator.hpp
IMU_GNSS_FUSION/include/sensor/: Analysis.md  gnss.hpp  imu.hpp  odom_6dof.hpp  openstreetmap.hpp
IMU_GNSS_FUSION/src/: imu_gnss_ekf.cpp
Image/: DistanceTransform.cpp  DistanceTransform.h  Image.cpp  Image.h  ImageDraw.h  ImageIO.cpp  ImageIO.h  VideoCapture.h
LineFit/: LineFitter.cpp  LineFitter.h  LineSegment.cpp  LineSegment.h  MMFunction.h  Point.h  main.cpp  para_template_line_fitter.txt
OSM/: CMakeLists.txt  CoordinatesTranform.h  Element.cpp  Element.h  ImageDraw.h  RoadExtract.py  main.cpp
OSM/LatAndLongtitude/: lonlat.csv
RELOCALIZATION/: FdcmMatch.h  GPS_recover.cpp  Render.h
Unit-test/: CMakeLists.txt  LineFit-UNIT.cpp  Matcher-UNIT.cpp  OSMRender-UNIT.cpp  RenderAndLineFit.cpp  VideoCap.cpp  dtImage3dGen-UNIT.cpp
Unit-test/Config/: LFlineFitterConfig.txt  LMlineMatcherConfig.txt
Unit-test/OutputImages/MatchedImages/: 1.output.ppm  100.output.ppm  101.output.ppm  104.output.ppm  105.output.ppm  106.output.ppm  107.output.ppm  108.output.ppm  113.output.ppm  127.output.ppm  128.output.ppm  130.output.ppm  132.output.ppm  133.output.ppm  135.output.ppm  143.output.ppm  150.output.ppm  153.output.ppm  156.output.ppm  157.output.ppm  158.output.ppm  160.output.ppm  162.output.ppm  165.output.ppm  17.output.ppm  180.output.ppm  189.output.ppm  191.output.ppm  192.output.ppm  194.output.ppm  195.output.ppm  196.output.ppm  197.output.ppm  198.output.ppm  20.output.ppm  202.output.ppm  21.output.ppm  220.output.ppm  221.output.ppm  222.output.ppm  (+124 more)
Unit-test/OutputImages/queryImages/: ShanghaiNet.pgm  ShanghaiNet.ppm  ShanghaiNet.ppm.output.ppm  ShanghaiNet.txt  ShanghaiNetlines.pgm  four.ppm  four.ppm.output.ppm  shanghaiEdge.txt  shanghaiEdgePGM.pgm  shanghaiEdgeSimplified.pgm  上海黄浦江左边部分.pgm
Unit-test/OutputImages/tempImages/: template_list.txt  上海近崇明岛.pgm  上海近崇明岛Lines.pgm  上海近崇明岛Lines.txt
Unit-test/OutputImages/tempImages/template_lists/: template_list_1.txt  template_list_10.txt  template_list_100.txt  template_list_101.txt  template_list_102.txt  template_list_103.txt  template_list_104.txt  template_list_105.txt  template_list_106.txt  template_list_107.txt  template_list_108.txt  template_list_109.txt  template_list_11.txt  template_list_110.txt  template_list_111.txt  template_list_112.txt  template_list_113.txt  template_list_114.txt  template_list_115.txt  template_list_116.txt  template_list_117.txt  template_list_118.txt  template_list_119.txt  template_list_12.txt  template_list_120.txt  template_list_121.txt  template_list_122.txt  template_list_123.txt  template_list_124.txt  template_list_125.txt  template_list_126.txt  template_list_127.txt  template_list_128.txt  template_list_129.txt  template_list_13.txt  template_list_130.txt  template_list_131.txt  template_list_132.txt  template_list_133.txt  template_list_134.txt  (+444 more)
Unit-test/OutputImages/tempImages/上海近崇明岛/LINEs/: 0Lines.pgm  100Lines.pgm  101Lines.pgm  102Lines.pgm  103Lines.pgm  104Lines.pgm  105Lines.pgm  106Lines.pgm  107Lines.pgm  108Lines.pgm  109Lines.pgm  10Lines.pgm  110Lines.pgm  111Lines.pgm  112Lines.pgm  113Lines.pgm  114Lines.pgm  115Lines.pgm  116Lines.pgm  117Lines.pgm  118Lines.pgm  119Lines.pgm  11Lines.pgm  120Lines.pgm  121Lines.pgm  122Lines.pgm  123Lines.pgm  124Lines.pgm  125Lines.pgm  126Lines.pgm  127Lines.pgm  128Lines.pgm  129Lines.pgm  12Lines.pgm  130Lines.pgm  131Lines.pgm  132Lines.pgm  133Lines.pgm  134Lines.pgm  135Lines.pgm  (+444 more)
Unit-test/OutputImages/tempImages/上海近崇明岛/PGMs/: 0.pgm  1.pgm  10.pgm  100.pgm  101.pgm  102.pgm  103.pgm  104.pgm  105.pgm  106.pgm  107.pgm  108.pgm  109.pgm  11.pgm  110.pgm  111.pgm  112.pgm  113.pgm  114.pgm  115.pgm  116.pgm  117.pgm  118.pgm  119.pgm  12.pgm  120.pgm  121.pgm  122.pgm  123.pgm  124.pgm  125.pgm  126.pgm  127.pgm  128.pgm  129.pgm  13.pgm  130.pgm  131.pgm  132.pgm  133.pgm  (+444 more)
Unit-test/OutputImages/tempImages/上海近崇明岛/TXTs/: 0Lines.txt  100Lines.txt  101Lines.txt  102Lines.txt  103Lines.txt  104Lines.txt  105Lines.txt  106Lines.txt  107Lines.txt  108Lines.txt  109Lines.txt  10Lines.txt  110Lines.txt  111Lines.txt  112Lines.txt  113Lines.txt  114Lines.txt  115Lines.txt  116Lines.txt  117Lines.txt  118Lines.txt  119Lines.txt  11Lines.txt  120Lines.txt  121Lines.txt  122Lines.txt  123Lines.txt  124Lines.txt  125Lines.txt  126Lines.txt  127Lines.txt  128Lines.txt  129Lines.txt  12Lines.txt  130Lines.txt  131Lines.txt  132Lines.txt  133Lines.txt  134Lines.txt  135Lines.txt  (+444 more)
